tests/specs/run/error_012_bad_dynamic_import_specifier/error_012_bad_dynamic_import_specifier.ts.out
Check [WILDCARD]error_012_bad_dynamic_import_specifier.ts
error: Uncaught (in promise) TypeError: Import "bad-module.ts" not a dependency
    at [WILDCARD]/error_012_bad_dynamic_import_specifier.ts:2:35

  const _badModule = await import("bad-module.ts");
                     ^
    at async [WILDCARD]/error_012_bad_dynamic_import_specifier.ts:2:22
